# server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: continuous-deployment.yml
src/: cors.rs  index.rs  index_init.sparql  index_result.sparql  init.rs  lib.rs  main.rs  search.rs  sparql.rs  yasgui.html
