[package]
name = "server"
edition = "2021"
repository = "https://github.com/kos-kit/server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "=4.0", features = ["derive"] }
oxhttp = { version = "0.1", features = ["rayon"] }
oxigraph = { version = "0.3.22" }
oxiri = "0.2"
rand = "0.8"
sparesults = { version = "0.1.8", features = ["rdf-star"] }
url = "2"
