[package]
name = "kos-kit-server"
edition = "2021"
repository = "https://github.com/kos-kit/server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "=4.0", features = ["derive"] }
flate2 = "=1.0.26"
oxhttp = { version = "0.1", features = ["rayon"] }
oxigraph = { version = "0.3.22" }
rayon-core = "1"
sparesults = { version = "0.1.8", features = ["rdf-star"] }
tantivy = "0.22.0"
url = "2"
